Fix elements alignment for card without any badge

--- a/src/trello/features/align-card-elements.scss
+++ b/src/trello/features/align-card-elements.scss
@@ -15,6 +15,7 @@
 
 .badges {
   align-self: center;
+  min-width: 1px;
   order: 2;
   padding: 0;
 }
